llvmirParser.cpp

// Generated from llvmir.g4 by ANTLR 4.13.0


#include "llvmirListener.h"
#include "llvmirVisitor.h"

#include "llvmirParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct LlvmirParserStaticData final {
  LlvmirParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  LlvmirParserStaticData(const LlvmirParserStaticData&) = delete;
  LlvmirParserStaticData(LlvmirParserStaticData&&) = delete;
  LlvmirParserStaticData& operator=(const LlvmirParserStaticData&) = delete;
  LlvmirParserStaticData& operator=(LlvmirParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag llvmirParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
LlvmirParserStaticData *llvmirParserStaticData = nullptr;

void llvmirParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (llvmirParserStaticData != nullptr) {
    return;
  }
#else
  assert(llvmirParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<LlvmirParserStaticData>(
    std::vector<std::string>{
      "compilationUnit", "topLevelEntity", "typeDef", "globalDecl", "globalDef", 
      "internalLinkage", "preemption", "immutable", "funcDecl", "funcDef", 
      "funcHeader", "funcBody", "basicBlock", "instruction", "terminator", 
      "localDefInst", "valueInstruction", "overflowFlag", "addInst", "fAddInst", 
      "subInst", "fSubInst", "mulInst", "fMulInst", "uDivInst", "sDivInst", 
      "fDivInst", "uRemInst", "sRemInst", "fRemInst", "storeInst", "shlInst", 
      "lShrInst", "aShrInst", "andInst", "orInst", "xorInst", "allocaInst", 
      "loadInst", "getElementPtrInst", "bitCastInst", "zExtInst", "sExtInst", 
      "siToFpInst", "fpToSiInst", "iCmpInst", "fCmpInst", "callInst", "retTerm", 
      "brTerm", "condBrTerm", "floatKind", "typeValue", "concreteType", 
      "value", "constant", "boolConst", "intConst", "floatConst", "nullConst", 
      "noneConst", "structConst", "arrayConst", "vectorConst", "typeConst", 
      "type", "intType", "floatType", "pointerType", "vectorType", "labelType", 
      "arrayType", "structType", "namedType", "mmxType", "tokenType", "opaquePointerType", 
      "addrSpace", "params", "param", "label", "iPred", "inBounds", "args", 
      "arg", "zeroInitializerConst", "fPred"
    },
    std::vector<std::string>{
      "", "'='", "'type'", "'appending'", "'available_externally'", "'common'", 
      "'internal'", "'linkonce'", "'linkonce_odr'", "'private'", "'weak'", 
      "'weak_odr'", "'dso_local'", "'dso_preemptable'", "'constant'", "'global'", 
      "'declare'", "'define'", "'('", "')'", "'{'", "'}'", "'nsw'", "'nuw'", 
      "'add'", "','", "'fadd'", "'sub'", "'fsub'", "'mul'", "'fmul'", "'udiv'", 
      "'sdiv'", "'fdiv'", "'urem'", "'srem'", "'frem'", "'store'", "'shl'", 
      "'lshr'", "'ashr'", "'and'", "'or'", "'xor'", "'alloca'", "'load'", 
      "'getelementptr'", "'bitcast'", "'to'", "'zext'", "'sext'", "'sitofp'", 
      "'fptosi'", "'icmp'", "'fcmp'", "'call'", "'ret'", "'void'", "'br'", 
      "'half'", "'bfloat'", "'float'", "'double'", "'x86_fp80'", "'fp128'", 
      "'ppc_fp128'", "'true'", "'false'", "'null'", "'none'", "'<'", "'>'", 
      "'['", "']'", "'opaque'", "'*'", "'x'", "'vscale'", "'label'", "'x86_mmx'", 
      "'token'", "'ptr'", "'addrspace'", "'eq'", "'ne'", "'sge'", "'sgt'", 
      "'sle'", "'slt'", "'uge'", "'ugt'", "'ule'", "'ult'", "'inbounds'", 
      "'zeroinitializer'", "'oeq'", "'oge'", "'ogt'", "'ole'", "'olt'", 
      "'one'", "'ord'", "'ueq'", "'une'", "'uno'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "Comment", "WhiteSpace", "IntLit", "FloatLit", "StringLit", 
      "GlobalIdent", "LocalIdent", "LabelIdent", "IntType"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  llvmirParserStaticData = staticData.release();
}

}

llvmirParser::llvmirParser(TokenStream *input) : llvmirParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

llvmirParser::llvmirParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  llvmirParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *llvmirParserStaticData->atn, llvmirParserStaticData->decisionToDFA, llvmirParserStaticData->sharedContextCache, options);
}

llvmirParser::~llvmirParser() {
  delete _interpreter;
}

const atn::ATN& llvmirParser::getATN() const {
  return *llvmirParserStaticData->atn;
}

std::string llvmirParser::getGrammarFileName() const {
  return "llvmir.g4";
}

const std::vector<std::string>& llvmirParser::getRuleNames() const {
  return llvmirParserStaticData->ruleNames;
}

const dfa::Vocabulary& llvmirParser::getVocabulary() const {
  return llvmirParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView llvmirParser::getSerializedATN() const {
  return llvmirParserStaticData->serializedATN;
}


//----------------- CompilationUnitContext ------------------------------------------------------------------

llvmirParser::CompilationUnitContext::CompilationUnitContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* llvmirParser::CompilationUnitContext::EOF() {
  return getToken(llvmirParser::EOF, 0);
}

std::vector<llvmirParser::TopLevelEntityContext *> llvmirParser::CompilationUnitContext::topLevelEntity() {
  return getRuleContexts<llvmirParser::TopLevelEntityContext>();
}

llvmirParser::TopLevelEntityContext* llvmirParser::CompilationUnitContext::topLevelEntity(size_t i) {
  return getRuleContext<llvmirParser::TopLevelEntityContext>(i);
}


size_t llvmirParser::CompilationUnitContext::getRuleIndex() const {
  return llvmirParser::RuleCompilationUnit;
}

void llvmirParser::CompilationUnitContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<llvmirListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCompilationUnit(this);
}

void llvmirParser::CompilationUnitContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<llvmirListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCompilationUnit(this);
}


std::any llvmirParser::CompilationUnitContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<llvmirVisitor*>(visitor))
    return parserVisitor->visitCompilationUnit(this);
  else
    return visitor->visitChildren(this);
}

llvmirParser::CompilationUnitContext* llvmirParser::compilationUnit() {
  CompilationUnitContext *_localctx = _tracker.createInstance<CompilationUnitContext>(_ctx, getState());
  enterRule(_localctx, 0, llvmirParser::RuleCompilationUnit);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(177);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == llvmirParser::T__15

    || _la == llvmirParser::T__16 || _la == llvmirParser::GlobalIdent

    || _la == llvmirParser::LocalIdent) {
      setState(174);
      topLevelEntity();
      setState(179);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(180);
    match(llvmirParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TopLevelEntityContext ------------------------------------------------------------------

llvmirParser::TopLevelEntityContext::TopLevelEntityContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

llvmirParser::TypeDefContext* llvmirParser::TopLevelEntityContext::typeDef() {
  return getRuleContext<llvmirParser::TypeDefContext>(0);
}

llvmirParser::GlobalDeclContext* llvmirParser::TopLevelEntityContext::globalDecl() {
  return getRuleContext<llvmirParser::GlobalDeclContext>(0);
}

llvmirParser::GlobalDefContext* llvmirParser::TopLevelEntityContext::globalDef() {
  return getRuleContext<llvmirParser::GlobalDefContext>(0);
}

llvmirParser::FuncDeclContext* llvmirParser::TopLevelEntityContext::funcDecl() {
  return getRuleContext<llvmirParser::FuncDeclContext>(0);
}

llvmirParser::FuncDefContext* llvmirParser::TopLevelEntityContext::funcDef() {
  return getRuleContext<llvmirParser::FuncDefContext>(0);
}


size_t llvmirParser::TopLevelEntityContext::getRuleIndex() const {
  return llvmirParser::RuleTopLevelEntity;
}

void llvmirParser::TopLevelEntityContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<llvmirListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTopLevelEntity(this);
}

void llvmirParser::TopLevelEntityContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<llvmirListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTopLevelEntity(this);
}


std::any llvmirParser::TopLevelEntityContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<llvmirVisitor*>(visitor))
    return parserVisitor->visitTopLevelEntity(this);
  else
    return visitor->visitChildren(this);
}

llvmirParser::TopLevelEntityContext* llvmirParser::topLevelEntity() {
  TopLevelEntityContext *_localctx = _tracker.createInstance<TopLevelEntityContext>(_ctx, getState());
  enterRule(_localctx, 2, llvmirParser::RuleTopLevelEntity);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(187);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(182);
      typeDef();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(183);
      globalDecl();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(184);
      globalDef();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(185);
      funcDecl();
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(186);
      funcDef();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TypeDefContext ------------------------------------------------------------------

llvmirParser::TypeDefContext::TypeDefContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* llvmirParser::TypeDefContext::LocalIdent() {
  return getToken(llvmirParser::LocalIdent, 0);
}

llvmirParser::TypeContext* llvmirParser::TypeDefContext::type() {
  return getRuleContext<llvmirParser::TypeContext>(0);
}


size_t llvmirParser::TypeDefContext::getRuleIndex() const {
  return llvmirParser::RuleTypeDef;
}

void llvmirParser::TypeDefContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<llvmirListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTypeDef(this);
}

void llvmirParser::TypeDefContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<llvmirListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTypeDef(this);
}


std::any llvmirParser::TypeDefContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<llvmirVisitor*>(visitor))
    return parserVisitor->visitTypeDef(this);
  else
    return visitor->visitChildren(this);
}

llvmirParser::TypeDefContext* llvmirParser::typeDef() {
  TypeDefContext *_localctx = _tracker.createInstance<TypeDefContext>(_ctx, getState());
  enterRule(_localctx, 4, llvmirParser::RuleTypeDef);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(189);
    match(llvmirParser::LocalIdent);
    setState(190);
    match(llvmirParser::T__0);
    setState(191);
    match(llvmirParser::T__1);
    setState(192);
    type(0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- GlobalDeclContext ------------------------------------------------------------------

llvmirParser::GlobalDeclContext::GlobalDeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* llvmirParser::GlobalDeclContext::GlobalIdent() {
  return getToken(llvmirParser::GlobalIdent, 0);
}

llvmirParser::ImmutableContext* llvmirParser::GlobalDeclContext::immutable() {
  return getRuleContext<llvmirParser::ImmutableContext>(0);
}

llvmirParser::TypeContext* llvmirParser::GlobalDeclContext::type() {
  return getRuleContext<llvmirParser::TypeContext>(0);
}

llvmirParser::InternalLinkageContext* llvmirParser::GlobalDeclContext::internalLinkage() {
  return getRuleContext<llvmirParser::InternalLinkageContext>(0);
}

llvmirParser::PreemptionContext* llvmirParser::GlobalDeclContext::preemption() {
  return getRuleContext<llvmirParser::PreemptionContext>(0);
}


size_t llvmirParser::GlobalDeclContext::getRuleIndex() const {
  return llvmirParser::RuleGlobalDecl;
}

void llvmirParser::GlobalDeclContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<llvmirListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterGlobalDecl(this);
}

void llvmirParser::GlobalDeclContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<llvmirListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitGlobalDecl(this);
}


std::any llvmirParser::GlobalDeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<llvmirVisitor*>(visitor))
    return parserVisitor->visitGlobalDecl(this);
  else
    return visitor->visitChildren(this);
}

llvmirParser::GlobalDeclContext* llvmirParser::globalDecl() {
  GlobalDeclContext *_localctx = _tracker.createInstance<GlobalDeclContext>(_ctx, getState());
  enterRule(_localctx, 6, llvmirParser::RuleGlobalDecl);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(194);
    match(llvmirParser::GlobalIdent);
    setState(195);
    match(llvmirParser::T__0);
    setState(197);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 4088) != 0)) {
      setState(196);
      internalLinkage();
    }
    setState(200);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == llvmirParser::T__11

    || _la == llvmirParser::T__12) {
      setState(199);
      preemption();
    }
    setState(202);
    immutable();
    setState(203);
    type(0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- GlobalDefContext ------------------------------------------------------------------

llvmirParser::GlobalDefContext::GlobalDefContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* llvmirParser::GlobalDefContext::GlobalIdent() {
  return getToken(llvmirParser::GlobalIdent, 0);
}

llvmirParser::ImmutableContext* llvmirParser::GlobalDefContext::immutable() {
  return getRuleContext<llvmirParser::ImmutableContext>(0);
}

llvmirParser::TypeContext* llvmirParser::GlobalDefContext::type() {
  return getRuleContext<llvmirParser::TypeContext>(0);
}

llvmirParser::ConstantContext* llvmirParser::GlobalDefContext::constant() {
  return getRuleContext<llvmirParser::ConstantContext>(0);
}

llvmirParser::InternalLinkageContext* llvmirParser::GlobalDefContext::internalLinkage() {
  return getRuleContext<llvmirParser::InternalLinkageContext>(0);
}

llvmirParser::PreemptionContext* llvmirParser::GlobalDefContext::preemption() {
  return getRuleContext<llvmirParser::PreemptionContext>(0);
}


size_t llvmirParser::GlobalDefContext::getRuleIndex() const {
  return llvmirParser::RuleGlobalDef;
}

void llvmirParser::GlobalDefContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<llvmirListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterGlobalDef(this);
}

void llvmirParser::GlobalDefContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<llvmirListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitGlobalDef(this);
}


std::any llvmirParser::GlobalDefContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<llvmirVisitor*>(visitor))
    return parserVisitor->visitGlobalDef(this);
  else
    return visitor->visitChildren(this);
}

llvmirParser::GlobalDefContext* llvmirParser::globalDef() {
  GlobalDefContext *_localctx = _tracker.createInstance<GlobalDefContext>(_ctx, getState());
  enterRule(_localctx, 8, llvmirParser::RuleGlobalDef);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(205);
    match(llvmirParser::GlobalIdent);
    setState(206);
    match(llvmirParser::T__0);
    setState(208);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 4088) != 0)) {
      setState(207);
      internalLinkage();
    }
    setState(211);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == llvmirParser::T__11

    || _la == llvmirParser::T__12) {
      setState(210);
      preemption();
    }
    setState(213);
    immutable();
    setState(214);
    type(0);
    setState(215);
    constant();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- InternalLinkageContext ------------------------------------------------------------------

llvmirParser::InternalLinkageContext::InternalLinkageContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t llvmirParser::InternalLinkageContext::getRuleIndex() const {
  return llvmirParser::RuleInternalLinkage;
}

void llvmirParser::InternalLinkageContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<llvmirListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterInternalLinkage(this);
}

void llvmirParser::InternalLinkageContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<llvmirListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitInternalLinkage(this);
}


std::any llvmirParser::InternalLinkageContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<llvmirVisitor*>(visitor))
    return parserVisitor->visitInternalLinkage(this);
  else
    return visitor->visitChildren(this);
}

llvmirParser::InternalLinkageContext* llvmirParser::internalLinkage() {
  InternalLinkageContext *_localctx = _tracker.createInstance<InternalLinkageContext>(_ctx, getState());
  enterRule(_localctx, 10, llvmirParser::RuleInternalLinkage);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(217);
    _la = _input->LA(1);
    if (!((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 4088) != 0))) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PreemptionContext ------------------------------------------------------------------

llvmirParser::PreemptionContext::PreemptionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t llvmirParser::PreemptionContext::getRuleIndex() const {
  return llvmirParser::RulePreemption;
}

void llvmirParser::PreemptionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<llvmirListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPreemption(this);
}

void llvmirParser::PreemptionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<llvmirListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPreemption(this);
}


std::any llvmirParser::PreemptionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<llvmirVisitor*>(visitor))
    return parserVisitor->visitPreemption(this);
  else
    return visitor->visitChildren(this);
}

llvmirParser::PreemptionContext* llvmirParser::preemption() {
  PreemptionContext *_localctx = _tracker.createInstance<PreemptionContext>(_ctx, getState());
  enterRule(_localctx, 12, llvmirParser::RulePreemption);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(219);
    _la = _input->LA(1);
    if (!(_la == llvmirParser::T__11

    || _la == llvmirParser::T__12)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ImmutableContext ------------------------------------------------------------------

llvmirParser::ImmutableContext::ImmutableContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t llvmirParser::ImmutableContext::getRuleIndex() const {
  return llvmirParser::RuleImmutable;
}
